# Sales_Prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/sales_prediction/: data.py  modeling.py
src/sales_prediction/cli/: __init__.py  predict.py  train.py
