[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-prediction"
version = "0.1.0"
description = "End-to-end sales prediction using advertising spend"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.12",
]

[project.scripts]
sp-train = "sales_prediction.cli.train:main"
sp-predict = "sales_prediction.cli.predict:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

